deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world-nodejs
  namespace: demo-minsal-2
  labels:
    app: hello-world-nodejs
    app.kubernetes.io/component: hello-world-nodejs
    app.kubernetes.io/instance: hello-world-nodejs
    app.kubernetes.io/name: hello-world-nodejs
    app.kubernetes.io/part-of: hello-world-nodejs-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-namespace: demo-minsal-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-nodejs
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world-nodejs
        deployment: hello-world-nodejs
    spec:
      containers:
        - name: hello-world-nodejs
          image: >-
            quay.io/cestayg/hello-world-nodejs:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
