route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-world-nodejs
  namespace: demo-minsal-2
  labels:
    app: hello-world-nodejs
    app.kubernetes.io/component: hello-world-nodejs
    app.kubernetes.io/instance: hello-world-nodejs
    app.kubernetes.io/name: hello-world-nodejs
    app.kubernetes.io/part-of: hello-world-nodejs-app
    app.openshift.io/runtime-version: develop
spec:
  host: hello-world-nodejs-demo-minsal-2.apps.cluster-jkrn6.sandbox2745.opentlc.com
  to:
    kind: Service
    name: hello-world-nodejs
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
